# rudo

./: .dockerignore  Cargo.toml  Makefile  README.md  rustfmt.toml
src/lib/: cli.rs  lib.rs  store.rs  task.rs
src/lib/cli/: handlers.rs
zarf/compose/: docker-compose.yaml
zarf/docker/: Dockerfile.geni  Dockerfile.server
